# Nexus

./: .gitignore  files.txt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DspContext.h  DspMath.h  DspModule.h  ProcessorChain.cpp  ProcessorChain.h  dsp_native.cpp
app/src/main/cpp/modules/: Modules.cpp  Modules.h
app/src/main/java/com/nexus/nexus3d/: DspNativeBridge.kt  MainActivity.kt  Nexus3DApp.kt
app/src/main/java/com/nexus/nexus3d/audio/: AudioController.kt
app/src/main/java/com/nexus/nexus3d/core/data/: DatabaseModule.kt  LocalMediaScanner.kt  NexusDatabase.kt  PresetDao.kt  PresetEntity.kt  SettingsEntity.kt  TrackDao.kt  TrackEntity.kt
app/src/main/java/com/nexus/nexus3d/core/domain/: DspRepository.kt  MacroMapper.kt
app/src/main/java/com/nexus/nexus3d/feature/player/: PlayerScreen.kt  PlayerViewModel.kt
app/src/main/java/com/nexus/nexus3d/feature/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/nexus/nexus3d/ui/theme/: Color.kt  Theme.kt
gradle/: libs.versions.toml
scripts/: generate_icons.py
